# CASMcode

./: .gitmodules  CMakeLists.txt  Makefile.am  bootstrap.sh  build_install.sh  casm_version.txt  casmmc.cpp  configure.ac  enum.out
build_scripts/: conda-devel.sh  install-boost.sh  install-casm.sh  install-env-linux.sh  install-miniconda-linux.sh  install-miniconda.sh  make-cpp.sh  travis-install.sh  travis-script.sh  travis-variables-linux.sh  travis-variables-osx.sh
include/casm/clex/: ClexBasis.hh  ClexBasisInfo.hh
include/casm/monte_carlo/grand_canonical/: ChargeNeutralGrandCanonical.hh
src/casm/monte_carlo/: MonteDefinitions.cc
src/casm/monte_carlo/grand_canonical/: ChargeNeutralGrandCanonical.cc  ChargeNeutralGrandCanonicalEvent.hh  ChargeNeutralGrandCanonicalI.cc
tests/functional/FCC_NiAl_Hstrain_enumeration/: run.sh
tests/functional/FCC_NiAl_Hstrain_enumeration/project/: LOG  enum.out  strain_enum.json
tests/functional/FCC_NiAl_Hstrain_enumeration/project/.casm/: composition_axes.json  project_settings.json
tests/functional/FCC_NiAl_Hstrain_enumeration/project/.casm/jsonDB/: config_list.json  (+1 more)
tests/functional/FCC_NiAl_Hstrain_enumeration/project/symmetry/: factor_group.json  lattice_point_group.json
tests/unit/App/: run_test_App
tests/unit/casm_io/: run_test_casm_io
tests/unit/clex/: run_test_clex
tests/unit/clusterography/: run_test_clusterography
tests/unit/container/: run_test_container
tests/unit/crystallography/: run_test_crystallography
tests/unit/monte_carlo/: run_test_monte_carlo
tests/unit/system/: run_test_system
(+7 files in other folders)
